--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "python.defaultInterpreterPath": "C:/Users/Windows/anaconda3/envs/ai1120/python.exe",
   "python.languageServer": "Pylance",
+  "python.terminal.activateEnvironment": true,
   "python.analysis.typeCheckingMode": "basic",
-  "python.analysis.autoImportCompletions": true
+  "files.associations": {
+    "*.py": "python"
+  }
 }
