--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 DB_URL=mysql://root:123456@127.0.0.1:3306/project1?charset=utf8mb4
 # 如果用 SQLite 就写: DB_URL=sqlite://resumes.db
 
-LLM_API_KEY=sk-effdfa994395427e8999e6f3c561c2e3
-LLM_BASE_URL=https://api.deepseek.com/v1
+LLM_API_KEY=sk-9c23d117d7344c1a98ed08ab6562b183
+LLM_BASE_URL=https://api.deepseek.com
 LLM_MODEL_NAME=deepseek-chat
 
 MINIO_ENDPOINT=127.0.0.1:9100
